--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,13 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
-    compile("org.springframework.boot:spring-boot-starter-jetty")
+    compile "org.eclipse.jetty:jetty-webapp:9.+"
+    compile "org.eclipse.jetty:jetty-jsp:9.+"
+
+    testCompile "junit:junit"
+    testCompile "org.apache.httpcomponents:httpclient:4.5.5"
+    testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
+    testCompile "org.json:json:20180130"
+
+
 }
