--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 jar {
-    baseName = 'triberg'
+    baseName = 'ticktok'
     version =  '0.1.0'
 }
 
@@ -29,6 +29,8 @@ dependencies {
     }
     compile "org.eclipse.jetty:jetty-webapp:9.+"
     compile "org.eclipse.jetty:jetty-jsp:9.+"
+
+    compile "com.rabbitmq:amqp-client:5.1.2"
 
     testCompile "junit:junit"
     testCompile "org.apache.httpcomponents:httpclient:4.5.5"
