--- a/config.yml
+++ b/config.yml
@@ -22,7 +22,7 @@ jobs:
       TERM: dumb
 
     steps:
-      - rabbit: docker run -d --hostname my-rabbit --name some-rabbit -p 5672:5672 rabbitmq:3.7
+      - run: docker run -d --hostname my-rabbit --name some-rabbit -p 5672:5672 rabbitmq:3.7
 
       - checkout
 
