--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: rabbitmq:3.7
+      - image: rabbitmq:3.7
 
     working_directory: ~/repo
 
@@ -31,7 +31,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: docker run -d --hostname my-rabbit --name some-rabbit -p 5672:5672 rabbitmq:3.7
+      # - run: docker run -d --hostname my-rabbit --name some-rabbit -p 5672:5672 rabbitmq:3.7
       - run: ./gradlew dependencies
 
       - save_cache:
