--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
 
     steps:
       - checkout
+      - setup_remote_docker
 
       # Download and cache dependencies
       - restore_cache:
@@ -39,4 +40,18 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: ./gradlew test
+      - run: ./gradlew build
+
+      - run:
+        name: Build application Docker image
+        command: |
+          docker build -t app .
+
+      - publish:
+        name: Publish application Docker image
+        command: |
+          if [ "${CIRCLE_BRANCH}" == "master" ]; then
+            docker login
+            docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+            docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+          fi
