--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
         name: Publish application Docker image
         command: |
           if [ "${CIRCLE_BRANCH}" == "master" ]; then
-            docker login
-            docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-            docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+            # docker login
+            # docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+            # docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
           fi
