--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,14 +44,14 @@ jobs:
 
       - run:
         name: Build application Docker image
-        command: |
-          docker build -t app .
+        command: docker build -t app .
 
       - publish:
         name: Publish application Docker image
-        command: |
-          if [ "${CIRCLE_BRANCH}" == "master" ]; then
-            # docker login
-            # docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-            # docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-          fi
+        command:
+          - >
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              # docker login
+              # docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+              # docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+            fi
