--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
           name: Publish application Docker image
           command: |
               if [ "${CIRCLE_BRANCH}" == "master" ]; then
+                echo pending
                 # docker login
                 # docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
                 # docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
