--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
-      TAG: 0.1.0
+      IMAGE: ticktok/ticktok
 
     steps:
       - checkout
@@ -51,7 +51,10 @@ jobs:
           name: Publish application Docker image
           command: |
               if [ "${CIRCLE_BRANCH}" == "master" ]; then
-                docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-                docker tag app ticktok/ticktok:$TAG
-                docker push ticktok/ticktok:$TAG
+                TAG=`git describe --tags`
+                if [[ "$(docker images -q $IMAGE:$TAG 2> /dev/null)" == "" ]]; then
+                    echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
+                    docker tag app $IMAGE:$TAG
+                    docker push $IMAGE:$TAG
+                  fi
               fi
