updated docker push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
           name: Publish application Docker image
           command: |
               if [ "${CIRCLE_BRANCH}" == "master" ]; then
-                TAG=`git describe --tags`
+                TAG=`git describe --tags --abbrev=0`
                 if [[ "$(docker images -q $IMAGE:$TAG 2> /dev/null)" == "" ]]; then
                     echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
                     docker tag app $IMAGE:$TAG
