--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
         exclude module: "spring-boot-starter-tomcat"
     }
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-security:2.0.0.RELEASE")
     compile "org.eclipse.jetty:jetty-webapp:9.+"
     compile "org.eclipse.jetty:jetty-jsp:9.+"
 
@@ -35,6 +36,7 @@ dependencies {
     compile "com.google.code.gson:gson:2.8.2"
 
     testCompile "junit:junit"
+    testCompile "org.mockito:mockito-core:2.15.0"
     testCompile "org.apache.httpcomponents:httpclient:4.5.5"
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
     testCompile "org.json:json:20180130"
