--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,6 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
@@ -42,9 +40,12 @@ dependencies {
     compile "com.rabbitmq:amqp-client:5.1.2"
     compile "com.google.code.gson:gson:2.8.2"
 
+    testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
     testCompile "org.junit.jupiter:junit-jupiter-engine:5.1.0"
     testCompile "org.junit.jupiter:junit-jupiter-api:5.1.0"
     testCompile "org.junit.platform:junit-platform-launcher:1.1.0"
+
     testCompile "org.hamcrest:hamcrest-all:1.3"
     testCompile "org.mockito:mockito-core:2.15.0"
 
