Made api key encrypted

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,7 +2,7 @@ rabbit:
   uri: amqp://localhost:5672
 
 http:
-  auth-token: 1234
+  auth-token: 7110eda4d09e062aa5e4a390b0a572ac0d2c0220
 
 management:
   port: 8081
