--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
       - deploy:
           name: Deploy ticktok server
           command: |
+            sh --version
             sh .circleci/upload_to_heroku.sh
             echo tag: $TAG
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
