--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,8 @@ jobs:
 
       - deploy:
           name: Deploy ticktok server
-          command:
-            - .circleci/heroku_setup.sh
-            - .circleci/upload_to_heroku.sh
-            - .circleci/publish_to_dockerhub.sh
+          command: |
+            .circleci/heroku_setup.sh
+            .circleci/upload_to_heroku.sh
+            .circleci/publish_to_dockerhub.sh
 
