* Added compose for rabbit & mongo * Added location header when creating a clock in progress

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,12 @@ rabbit:
 
 http:
   auth-token: ${ACCESS_TOKEN}
+  domain: ${SELF_DOMAIN}
 
 management:
   context-path: /mgmt
+
+spring:
+  data:
+    mongo:
+      uri: ${MONGO_URI}
