--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'org.springframework.boot'
 
 jar {
     baseName = 'ticktok'
-    version =  '0.1.0'
+    version =  '0.1.1'
 }
 
 sourceCompatibility = 1.8
@@ -26,24 +26,32 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
+    compileOnly "org.projectlombok:lombok:1.16.20"
+
+    // Spring
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
-    compile "io.springfox:springfox-swagger2:2.6.1"
-    compile "io.springfox:springfox-swagger-ui:2.6.1"
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-security:2.0.0.RELEASE")
     compile "org.eclipse.jetty:jetty-webapp:9.+"
     compile "org.eclipse.jetty:jetty-jsp:9.+"
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb"
+
+    //Swagger
+    compile "io.springfox:springfox-swagger2:2.6.1"
+    compile "io.springfox:springfox-swagger-ui:2.6.1"
 
     compile "com.rabbitmq:amqp-client:5.1.2"
     compile "com.google.code.gson:gson:2.8.2"
 
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
+    // JUnit 5
     testCompile "org.junit.jupiter:junit-jupiter-engine:5.1.0"
     testCompile "org.junit.jupiter:junit-jupiter-api:5.1.0"
     testCompile "org.junit.platform:junit-platform-launcher:1.1.0"
@@ -54,6 +62,7 @@ dependencies {
     testCompile "org.apache.httpcomponents:httpclient:4.5.5"
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
     testCompile "org.json:json:20180130"
+    testCompile "com.beust:klaxon:2.1.13"
 
 
 }
