--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,6 @@ jobs:
             .circleci/deploy_to_heroku.sh
             .circleci/publish_to_dockerhub.sh
             .circleci/check_health.sh http://localhost:8080
-          no_output_timeout: 5s
+          no_output_timeout: 1m
 
 
