--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,10 @@ jobs:
           command: |
             .circleci/deploy_to_heroku.sh
             .circleci/publish_to_dockerhub.sh
-            .circleci/check_health.sh http://localhost:8080
-          no_output_timeout: 1m
+
+      - run:
+        name: Health check
+        command: .circleci/check_health.sh http://localhost:8080
+        no_output_timeout: 30s
 
 
