--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,6 @@ jobs:
       - run:
           name: Health check
           command: .circleci/check_health.sh http://localhost:8080
-          no_output_timeout: 30s
+          no_output_timeout: 1m
 
 
