--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
 
       - deploy:
           name: Deploy ticktok server
-          timeout: 5s
+          no_output_timeout: 5s
           command: |
             .circleci/deploy_to_heroku.sh
             .circleci/publish_to_dockerhub.sh:
