--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 
-jar {
+bootJar {
     baseName = 'ticktok'
     version =  '0.1.1'
 }
