--- a/build.gradle
+++ b/build.gradle
@@ -44,12 +44,19 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
     compile "org.springframework.boot:spring-boot-starter-amqp"
 
+    compile "org.hibernate.validator:hibernate-validator:6.0.13.Final"
+    compile "javax.validation:validation-api:2.0.1.Final"
+
+
+
+    compile "com.google.code.gson:gson:2.8.2"
+
     //Swagger
     compile "io.springfox:springfox-swagger2:2.6.1"
     compile "io.springfox:springfox-swagger-ui:2.6.1"
 
-    compile "com.google.code.gson:gson:2.8.2"
 
+    //Tests
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // JUnit 5
