--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,9 +3,14 @@ rabbit:
 
 http:
   auth-token: a5f98e2b068ee51f90fd81c530e7fb4e306e7f42
-  domain: http://localhost:8080
+  domain: http://localhost:8090
 
+server:
+  port: 8090
 
 management:
+  endpoint:
+    shutdown:
+      enabled: true
   server:
     port: 8081
