--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: rabbitmq:3.7
       - image: mongo:3.4
+      - image: selenium/standalone-chrome:3.14.0
 
     working_directory: ~/repo
 
