--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,12 @@ services:
     ports:
       - 27017:27017
 
+#  selenium:
+#    image: selenium/standalone-chrome:3.14.0-europium
+#    ports:
+#      - 4444:4444
+#    volumes:
+#      - /dev/shm:/dev/shm
+
 
 
