--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.2.61'
+    ext.kotlin_version = '1.2.70'
 
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.2.0'
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
     }
 }
@@ -15,11 +16,12 @@ apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 
 bootJar {
     baseName = 'ticktok'
-    version =  '0.1.1'
+    version = '0.1.1'
 }
 
 sourceCompatibility = 1.8
@@ -56,7 +58,6 @@ dependencies {
     compile "io.springfox:springfox-swagger2:2.6.1"
     compile "io.springfox:springfox-swagger-ui:2.6.1"
 
-
     //Tests
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
@@ -75,17 +76,14 @@ dependencies {
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '3.13.0'
 
-
     //Other
     testCompile "org.apache.httpcomponents:httpclient:4.5.5"
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
     testCompile "org.json:json:20180130"
     testCompile "com.beust:klaxon:2.1.13"
     testCompile 'org.awaitility:awaitility:3.1.2'
-
-
-
 }
+
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
@@ -96,3 +94,14 @@ compileTestKotlin {
         jvmTarget = "1.8"
     }
 }
+
+
+task webpack(type: Exec, description: 'run webpack') {
+    commandLine "$projectDir/node_modules/.bin/webpack"
+}
+
+tasks.withType(JavaCompile) {
+    compileTask -> compileTask.dependsOn webpack
+}
+
+
