added npm install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,8 @@ jobs:
 
       - run: ./gradlew dependencies
 
+      - run: npm install
+
       - save_cache:
           paths:
             - ~/.gradle
