--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 
-jar {
+bootJar {
     baseName = 'ticktok'
     version =  '0.1.1'
 }
