--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: rabbitmq:3.7
       - image: mongo:3.4
-      - image: selenium/standalone-chrome:3.14.0
+      # - image: selenium/standalone-chrome:3.14.0
 
     working_directory: ~/repo
 
@@ -27,6 +27,15 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+
+      - run: mkdir test-reports
+      - run:
+          name: Download Selenium
+          command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
+      - run:
+          name: Start Selenium
+          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
+          background: true
 
       # Download and cache dependencies
       - restore_cache:
