--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,9 @@ jobs:
           command: java -jar selenium-server-standalone-3.14.0.jar -log test-reports/selenium.log
           background: true
 
+      - store_artifacts:
+          path: test-reports
+
       # Download and cache dependencies
       - restore_cache:
           keys:
