--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk-node-browsers-legacy
+      - image: circleci/openjdk:8-jdk-node-legacy
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: rabbitmq:3.7
       - image: mongo:3.4
-
+      - image: selenium/standalone-chrome:3.14
     working_directory: ~/repo
 
     environment:
