--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,13 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk-node-legacy
+      - image: circleci/8-jdk-node-browsers-legacy
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: rabbitmq:3.7
       - image: mongo:3.4
-      - image: selenium/standalone-chrome:3.14
     working_directory: ~/repo
 
     environment:
@@ -25,7 +24,6 @@ jobs:
 
     steps:
       - checkout
-      - setup_remote_docker
 
       - run: mkdir test-reports
       - run:
@@ -35,6 +33,8 @@ jobs:
           name: Start Selenium
           command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
           background: true
+
+      - setup_remote_docker
 
       # Download and cache dependencies
       - restore_cache:
