--- a/build.gradle
+++ b/build.gradle
@@ -92,28 +92,13 @@ compileTestKotlin {
     }
 }
 
-task build_dashboard(type: Exec) {
-    workingDir "dashboard"
-    environment "PUBLIC_URL", ' '
-    commandLine "npm", "install"
-}
-
-task test_dashboard(type: Exec) {
-    workingDir "dashboard"
-    environment "CI", "true"
-    commandLine "npm", "test"
-}
-
 task copy_dashboard(type: Copy) {
     from "dashboard/build"
     into "src/main/resources/public"
 }
 
 compileJava {
-    dependsOn build_dashboard
-    dependsOn test_dashboard
     dependsOn copy_dashboard
-
 }
 
 task cleanDashboard(type: Delete) {
@@ -125,7 +110,7 @@ clean {
 }
 
 test {
-    environment "DASHBOARD_URL", "http://localhost:8080"
+    environment "DASHBOARD_URL", "http:/0.0.0.0:8080"
     environment "SELF_DOMAIN", "http://localhost:8080"
     useJUnitPlatform()
 }
