--- a/build.gradle
+++ b/build.gradle
@@ -110,7 +110,7 @@ clean {
 }
 
 test {
-    environment "DASHBOARD_URL", "http:/0.0.0.0:8080"
+    environment "DASHBOARD_URL", "http:/localhost:8080"
     environment "SELF_DOMAIN", "http://localhost:8080"
     useJUnitPlatform()
 }
