--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
     }
 }
@@ -39,11 +39,11 @@ dependencies {
         exclude module: "spring-boot-starter-tomcat"
     }
     compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile "org.springframework.boot:spring-boot-starter-security:2.0.0.RELEASE"
-    compile "org.eclipse.jetty:jetty-webapp:9.+"
-    compile "org.eclipse.jetty:jetty-jsp:9.+"
+    compile "org.springframework.boot:spring-boot-starter-security"
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
     compile "org.springframework.boot:spring-boot-starter-amqp"
+    compile "org.eclipse.jetty:jetty-webapp:9.+"
+    compile "org.eclipse.jetty:jetty-jsp:9.+"
 
     compile "org.hibernate.validator:hibernate-validator:6.0.13.Final"
     compile "javax.validation:validation-api:2.0.1.Final"
@@ -54,12 +54,15 @@ dependencies {
     compile "io.springfox:springfox-swagger2:2.6.1"
     compile "io.springfox:springfox-swagger-ui:2.6.1"
 
+
+    // ======================= Tests ==========================
+
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // JUnit 5
-    testCompile "org.junit.jupiter:junit-jupiter-engine:5.1.0"
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.1.0"
-    testCompile "org.junit.platform:junit-platform-launcher:1.1.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.1.0"
+    //testCompile "org.junit.platform:junit-platform-launcher:1.1.0"
 
     testCompile "org.hamcrest:hamcrest-all:1.3"
     testCompile "org.mockito:mockito-core:2.15.0"
@@ -90,12 +93,27 @@ compileTestKotlin {
     }
 }
 
+task build_dashboard() {
+    doLast {
+        exec {
+            workingDir "dashboard"
+            commandLine "npm", "install"
+        }
+        exec {
+            workingDir "dashboard"
+            environment "PUBLIC_URL", ' '
+            commandLine "npm", "run", "build"
+        }
+    }
+}
+
 task copy_dashboard(type: Copy) {
     from "dashboard/build"
     into "src/main/resources/public"
 }
 
 compileJava {
+    dependsOn build_dashboard
     dependsOn copy_dashboard
 }
 
