--- a/build.gradle
+++ b/build.gradle
@@ -62,13 +62,16 @@ dependencies {
     // JUnit 5
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.0"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.1.0"
-    //testCompile "org.junit.platform:junit-platform-launcher:1.1.0"
 
     testCompile "org.hamcrest:hamcrest-all:1.3"
     testCompile "org.mockito:mockito-core:2.15.0"
 
     //Spring
     testCompile "org.springframework.boot:spring-boot-starter-test"
+    testCompile group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '2.1.1'
+    testCompile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
+
+
 
     //Selenium
     testCompile 'org.seleniumhq.selenium:selenium-java:3.14.0'
@@ -77,8 +80,7 @@ dependencies {
     //Other
     testCompile "org.apache.httpcomponents:httpclient:4.5.5"
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
-    testCompile "org.json:json:20180130"
-    testCompile "com.beust:klaxon:2.1.13"
+
 
 
 }
@@ -113,7 +115,6 @@ task copy_dashboard(type: Copy) {
 }
 
 compileJava {
-    //dependsOn build_dashboard
     dependsOn copy_dashboard
 }
 
