--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,9 +1,12 @@
 rabbit:
   uri: amqp://localhost:5672
+  queue:
+    ttl: 1
 
 http:
   auth-token: a5f98e2b068ee51f90fd81c530e7fb4e306e7f42
   domain: http://localhost:8080
+
 
 management:
   endpoints:
