[#162372410] Schedule clock count is wrong
* Resolved multiple schedule update on aspect
* Expire rabbit queues if no connection was made in a period of time
* Using clock list instead of clock count for active schedules
* Fixed key duplicate errors when adding same clock concurrently multiple times

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 rabbit:
   uri: ${RABBIT_URI}
+  queue:
+    ttl: 120000
 
 http:
   auth-token: ${ACCESS_TOKEN}
@@ -14,4 +16,3 @@ management:
   endpoints:
     web:
       base-path: /mgmt
-
