Added logging to all purgers Made all purgers use configuration for intervals

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,17 @@ management:
   endpoints:
     web:
       base-path: /mgmt
+
+clocks:
+  purge:
+    interval: 120000
+
+schedules:
+  purge:
+    interval: 3600000
+
+ticks:
+  purge:
+    interval: 43200000
+    keepCount: 10
+
